--- a/projects.html
+++ b/projects.html
@@ -42,57 +42,40 @@
     <h1 id="title">My Projects</h1>
 
     
-    <div id="main-div">
-        <table id="main-table">
-            <tr>
-                <td class="project" onclick='projectClick("nebula")'>
-                    <div>
-                        <h1 class="project-title">Nebula</h1>
-                        <p class="project-desc">The all in one discord bot</p>
-                        <div class="lang">
-                            <img class="lang-img" id="Python" src="/assets/images/python.png">
-                        </div>
-                    </div>
-                </td>
-                <td class="project" onclick='projectClick("safilizer")'>
-                    <h1 class="project-title">Safilizer</h1>
-                    <p class="project-desc"><b>Winner of the AI/ML Hackathon on Road safety, NSS IIT Roorkee, 2024<br><br>Teammate: </b><a target="_blank" href="https://github.com/Samik-Heda">Samik Heda</a><br><br>A simple solution to a big problem. A solution to drunk drivers, currently school bus drivers , but could be utilized for others in the future.</p>
-                    <div class="lang">
-                        <img class="lang-img" id="Python" src="/assets/images/python.png">
-                    </div>
-                </td>
-                <td class="project" onclick='projectClick("dashboard")'>
-                    <h1 class="project-title">Nebula Dashboard</h1>
-                    <p class="project-desc">The Nebula dashboard that allows control over the bot in a more elegant method</p>
-                    <div class="lang">
-                        <img class="lang-img" id="Python" src="/assets/images/python.png">
-                        <img class="lang-img" id="HTML" src="/assets/images/html.png">
-                        <img class="lang-img" id="CSS" src="/assets/images/css.png">
-                        <img class="lang-img" id="Javascript" src="/assets/images/js.png">
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td class="project" onclick='projectClick("isrocalendar")'>
-                    <h1 class="project-title">ISRO Calendar</h1>
-                    <p class="project-desc">An automated calendar feed for upcoming ISRO launches</p>
-                    <div class="lang">
-                        <img class="lang-img" id="HTML" src="/assets/images/html.png">
-                        <img class="lang-img" id="CSS" src="/assets/images/css.png">
-                        <img class="lang-img" id="Javascript" src="/assets/images/js.png">
-                    </div>
-                </td>
-                <td class="project" onclick='projectClick("dashboard")'>
-                    <h1 class="project-title">Profile Website</h1>
-                    <p class="project-desc"><b>This Website</b><br>A website to display my projects and code</p>
-                    <div class="lang">
-                        <img class="lang-img" id="HTML" src="/assets/images/html.png">
-                        <img class="lang-img" id="CSS" src="/assets/images/css.png">
-                        <img class="lang-img" id="Javascript" src="/assets/images/js.png">
-                    </div>
-                </td>
-            </tr>
-        </table>
+    <div class="main-div">
+        <div class="project" onclick='projectClick("nebula")'>
+            <h1 class="project-title">Nebula</h1>
+            <p class="project-desc">The all in one discord bot</p>
+            <div class="lang">
+                <img class="lang-img" id="Python" src="/assets/images/python.png">
+            </div>
+        </div>
+        <div class="project" onclick='projectClick("safilizer")'>
+            <h1 class="project-title">Safilizer</h1>
+            <p class="project-desc"><b>Winner of the AI/ML Hackathon on Road safety, NSS IIT Roorkee, 2024<br><br>Teammate: </b><a target="_blank" href="https://github.com/Samik-Heda">Samik Heda</a><br><br>A simple solution to a big problem. A solution to drunk drivers, currently school bus drivers, but could be utilized for others in the future.</p>
+            <div class="lang">
+                <img class="lang-img" id="Python" src="/assets/images/python.png">
+            </div>
+        </div>
+        <div class="project" onclick='projectClick("dashboard")'>
+            <h1 class="project-title">Nebula Dashboard</h1>
+            <p class="project-desc">The Nebula dashboard that allows control over the bot in a more elegant method</p>
+            <div class="lang">
+                <img class="lang-img" id="Python" src="/assets/images/python.png">
+                <img class="lang-img" id="HTML" src="/assets/images/html.png">
+                <img class="lang-img" id="CSS" src="/assets/images/css.png">
+                <img class="lang-img" id="Javascript" src="/assets/images/js.png">
+            </div>
+        </div>
+        <div class="project" onclick='projectClick("isrocalendar")'>
+            <h1 class="project-title">ISRO Calendar</h1>
+            <p class="project-desc">An automated calendar feed for upcoming ISRO launches</p>
+            <div class="lang">
+                <img class="lang-img" id="HTML" src="/assets/images/html.png">
+                <img class="lang-img" id="CSS" src="/assets/images/css.png">
+                <img class="lang-img" id="Javascript" src="/assets/images/js.png">
+            </div>
+        </div>
     </div>
 </body>
 
