--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="js/analytics.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/style/home.css">
@@ -29,7 +30,7 @@
         }
         window.onload = onloadFunc;
     </script>
-    <title>ISROisTHEbest</title>
+    <title>isroisthebest</title>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
         </div>
     </div>
     <img id="main-logo" src="/assets/images/logo.png">
-    <h1 id="title">Hello, I am <b>ISROisTHEbest</b></h1>
+    <h1 id="title">Hello, I am <b>isroisthebest</b></h1>
     <h1 id="subtitle">Developer, Chess Player, F1 Fan, Space Enthusiast</h1>
     <div id="lang">
         <img class="lang-img" id="Python" src="/assets/images/python.png">
