--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="js/analytics.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/style/projects.css">
@@ -21,12 +22,12 @@
                 window.open("https://nebula-dashboard.onrender.com", '_blank').focus();
             }
             else if (link == "isrocalendar"){
-                window.open("https://github.com/ISROisTHEbest/ISRO-Calendar", '_blank').focus();
+                window.open("https://github.com/isroisthebest/ISRO-Calendar", '_blank').focus();
             }
         }
     </script>
 
-    <title>ISROisTHEbest | Projects</title>
+    <title>isroisthebest | Projects</title>
 </head>
 
 <body>
